<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:focusableInTouchMode="true">

    <androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".View.MainActivity">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <include
                layout="@layout/toolbar" >

            </include>

        </com.google.android.material.appbar.AppBarLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="#FAFAFA"
            android:gravity="center"
            android:layout_marginTop="30dp"
            tools:context=".MainActivity">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="28sp"
                android:gravity="center"

                android:textColor="@color/rblue"
                android:text="@string/register" />

            <EditText
                android:id="@+id/e_edit_nameField"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_margin="20dp"
                android:background="@drawable/edittextdesign"
                android:hint="@string/name"
                android:paddingLeft="15sp"
                android:textColor="#000000"
                android:textColorHint="#9C9C9C" />

            <EditText
                android:id="@+id/e_edit_price"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_margin="20dp"
                android:background="@drawable/edittextdesign"
                android:hint="@string/email"
                android:paddingLeft="15sp"
                android:textColor="#000000"
                android:textColorHint="#9C9C9C"
                android:inputType="textEmailAddress"/>

            <EditText
                android:id="@+id/e_edit_source"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_margin="20dp"
                android:background="@drawable/edittextdesign"
                android:hint="@string/password"
                android:paddingLeft="15sp"
                android:textColor="#000000"
                android:textColorHint="#9C9C9C"
                android:inputType="textPassword" />

            <Button
                android:id="@+id/registerButton"
                android:background="@drawable/buttondesign"
                android:layout_width="match_parent"
                android:layout_margin="20dp"
                android:text="@string/submit"
                android:textColor="#FFFFFF"
                android:textSize="25sp"
                android:layout_height="60dp"
                android:shadowColor="#FAFAFA"
                android:shadowDx="0"
                android:shadowDy="0"
                android:shadowRadius="14" />

            <TextView
                android:id="@+id/mainText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:gravity="center"
                android:text="@string/login"
                android:textColor="@color/rblue"
                android:textSize="16sp"
                android:textStyle="bold"
                android:onClick="goLogin"/>


        </LinearLayout>


    </androidx.coordinatorlayout.widget.CoordinatorLayout>
    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigationView"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@android:color/white"
        app:menu="@menu/drawer_view_unauth" />
</androidx.drawerlayout.widget.DrawerLayout>
